--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -47,11 +47,11 @@ body {
   }
 }
 
-// .title {
-//   text-align: center;
-//   color: $bg;
-//   font-weight: 700;
-//   font-size: 36px;
-//   line-height: 60px;
-//   margin-bottom: 30px;
-// }
+.title {
+  text-align: center;
+  color: $bg;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 60px;
+  margin-bottom: 30px;
+}
