--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -72,7 +72,7 @@
   &-title {
     margin-bottom: 10px;
     font-size: 48px;
-    font-weight: 700;
+    @include f700;
     line-height: 72px;
   }
   &-text {
@@ -93,12 +93,12 @@
       height: 56px;
       border: none;
       font-size: 14px;
-      font-weight: 500;
+      @include f500;
       padding-left: 25px;
       padding-right: 60px;
       &::placeholder {
         color: #90a4ae;
-        font-weight: 500;
+        @include f500;
       }
     }
     button {
@@ -159,7 +159,7 @@
     padding: 10px 30px;
     align-items: center;
     min-height: 90px;
-    font-weight: 500;
+    @include f500;
     border: 1px solid #e7ecf2;
   }
   &-name {
@@ -178,7 +178,7 @@
   &-price {
     font-size: 20px;
     color: $bg;
-    font-weight: 700;
+    @include f700;
   }
   &-info {
     display: flex;
@@ -190,6 +190,7 @@
   &-author {
     display: flex;
     align-items: center;
+    max-width: 245px;
     .avatar {
       width: 30px;
       height: 30px;
@@ -202,7 +203,13 @@
     }
     span {
       font-size: 14px;
-      font-weight: 500;
+      @include f500;
+    }
+  }
+  &-star {
+    font-size: 12px;
+    span {
+      color: $bg;
     }
   }
 }
@@ -223,4 +230,94 @@
       color: #fff;
     }
   }
+}
+
+.product-slider {
+  padding: 110px 0 120px;
+  .slick-dots {
+    text-align: center;
+    margin-top: 50px;
+    li {
+      display: inline-block;
+      margin-left: 3px;
+      margin-right: 3px;
+      &.slick-active {
+        button {
+          background-color: $green;
+        }
+      }
+      button {
+        background-color: #e8e8e8;
+        border-radius: 50%;
+        border: none;
+        width: 16px;
+        height: 16px;
+        font-size: 0;
+        cursor: pointer;
+        outline: none;
+      }
+    }
+  }
+}
+
+.advantages {
+  background-color: $bg;
+  padding: 120px 0;
+  &__title {
+    color: #fff;
+  }
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__item {
+    max-width: 370px;
+    text-align: center;
+    padding: 0 15px;
+    &:hover {
+      .advantages__item-images {
+        background-color: $green;
+        transition: all 0.5s;
+      }
+      .advantages__item-title {
+        color: $green;
+        transition: all 0.5s;
+      }
+      .advantages__item-images {
+        g {
+          fill: #fff;
+          transition: all 0.5s;
+        }
+      }
+    }
+  }
+  &__item-images {
+    width: 113px;
+    height: 113px;
+    border-radius: 50%;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto 30px;
+  }
+  &__item-title {
+    margin-bottom: 25px;
+    color: #fff;
+    @include f500;
+    font-size: 24px;
+  }
+  &__item-text {
+    font-size: 15px;
+  }
+}
+
+.icosvg-1 svg {
+  width: 50px;
+}
+.icosvg-2 svg {
+  width: 71px;
+}
+.icosvg-3 svg {
+  width: 86px;
 }
