--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -265,6 +265,7 @@
   padding: 120px 0;
   &__title {
     color: #fff;
+    margin-bottom: 80px;
   }
   &__inner {
     display: flex;
@@ -320,4 +321,40 @@
 }
 .icosvg-3 svg {
   width: 86px;
+}
+
+.author {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 750px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__box {
+    max-width: 650px;
+    width: 100%;
+    min-height: 215px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $green;
+  }
+  &__title {
+    font-size: 30px;
+    line-height: 36px;
+    color: #fff;
+    margin-right: 45px;
+    max-width: 265px;
+    span {
+      @include f700;
+    }
+  }
+  &__link {
+    font-size: 18px;
+    line-height: 36px;
+    padding: 14px 40px;
+    background-color: #fff;
+    color: $bg;
+  }
 }
