--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -361,9 +361,6 @@
 
 .tutorial {
   padding: 60px 0 120px;
-  &__title {
-  }
-
   &__inner {
     display: flex;
     justify-content: space-between;
@@ -390,4 +387,166 @@
     color: $bg;
     padding: 30px 10px;
   }
+}
+
+.footer {
+  background-color: $bg;
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    padding: 115px 0 100px;
+  }
+
+  &__col {
+    max-width: 270px;
+    width: 100%;
+  }
+
+  &__col-menu {
+    max-width: 220px;
+  }
+
+  &__col-title {
+    font-family: "Raleway", sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    color: #fff;
+    padding-bottom: 22px;
+    margin-bottom: 30px;
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 2px;
+      width: 51px;
+      height: 3px;
+      background-color: $green;
+    }
+  }
+
+  &__col-text {
+    color: #b7c3c8;
+    margin-bottom: 30px;
+  }
+
+  &__info {
+    margin-top: 18px;
+    @include f500;
+    color: #fff;
+    padding-left: 30px;
+    position: relative;
+    &::before {
+      font-family: "icomoon" !important;
+      content: "\f041";
+      position: absolute;
+      color: $green;
+      font-size: 18px;
+      left: 0;
+      top: 0;
+    }
+  }
+
+  &__info-phone::before {
+    content: "\f095";
+  }
+
+  &__col-list {
+    a {
+      color: #b7c3c8;
+      margin-bottom: 15px;
+      padding-left: 22px;
+      position: relative;
+      &::before {
+        position: absolute;
+        font-family: "icomoon" !important;
+        content: "\f105";
+        font-size: 18px;
+        color: $green;
+        left: 0;
+      }
+    }
+  }
+
+  &__social-link {
+    margin-bottom: 33px;
+    li {
+      display: inline-block;
+    }
+    a {
+      width: 28px;
+      height: 28px;
+      background-image: url(../images/icons/css_sprites.png);
+      & + a {
+        margin-left: 7px;
+      }
+    }
+  }
+
+  &__form {
+    position: relative;
+    input {
+      border: none;
+      background-color: #2f3c43;
+      display: block;
+      width: 100%;
+      height: 40px;
+      color: #fff;
+      padding-left: 15px;
+      padding-right: 55px;
+      font-size: 14px;
+      &::placeholder {
+        color: #697378;
+      }
+    }
+    button {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      background-color: $green;
+      border: none;
+      height: 40px;
+      width: 43px;
+      cursor: pointer;
+      &::before {
+        font-family: "icomoon" !important;
+        content: "\f124";
+        position: absolute;
+        font-size: 20px;
+        color: #ffffff;
+        top: 11px;
+        left: 13px;
+      }
+    }
+  }
+
+  &__form-title {
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #fff;
+  }
+
+  &__copy {
+    border-top: 1px solid #424d53;
+  }
+
+  &__copy-text {
+    text-align: center;
+    color: #919699;
+    font-size: 15px;
+    padding: 27px 0 32px;
+  }
+}
+
+.link-twitter {
+  background-position: -28px -0;
+}
+.link-youtube {
+  background-position: -0 -28px;
+}
+.link-pinterest {
+  background-position: -28px -28px;
+}
+.link-linkedin {
+  background-position: -56px -0;
 }
