--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,6 +8,11 @@ html {
   box-sizing: inherit;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 a {
   display: inline-block;
   text-decoration: none;
@@ -29,6 +34,18 @@ body {
   color: $text;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+.content {
+  flex: 1 0 auto;
+}
+.footer {
+  flex: 0 0 auto;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -47,6 +64,10 @@ body {
   }
 }
 
+.page-content {
+  background-color: $grey;
+}
+
 .title {
   text-align: center;
   color: $bg;
@@ -59,4 +80,48 @@ body {
 .rate-star {
   display: inline-block;
   margin-right: 13px;
+}
+
+.breadcrumbs {
+  &__inner {
+    padding: 50px 0 40px;
+  }
+
+  &__list {
+    li {
+      display: inline-block;
+      position: relative;
+      & + li {
+        padding-left: 24px;
+        &::before {
+          position: absolute;
+          content: "-";
+          left: 8px;
+          color: $green;
+        }
+      }
+      &:last-child {
+        a,
+        span {
+          color: $bg;
+        }
+      }
+    }
+    a {
+      color: #b0bec5;
+    }
+  }
+}
+
+.angle-right {
+  position: relative;
+  padding-left: 15px;
+  &::before {
+    position: absolute;
+    font-family: "icomoon";
+    content: "\f105";
+    font-size: 14px;
+    color: $green;
+    left: 0;
+  }
 }
