--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -328,6 +328,112 @@
   color: #ef6c00;
 }
 
+#modal {
+  background-color: $green;
+  max-width: 730px;
+  width: 100%;
+  padding: 90px 0 110px;
+}
+
+.login__title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 48px;
+  margin-bottom: 40px;
+  color: #fff;
+  @include f700;
+}
+
+.login__wrapper {
+  form {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+
+  label {
+    position: relative;
+    display: block;
+    width: 100%;
+    // без дисп и видз не будет бефоров
+    &::before {
+      position: absolute;
+      font-family: "icomoon";
+      font-size: 14px;
+      color: #fff;
+      left: 18px;
+      top: 9px;
+    }
+  }
+
+  .login__label-name::before {
+    content: "\f007";
+  }
+
+  .login__label-pass::before {
+    content: "\f023";
+  }
+
+  input {
+    height: 43px;
+    margin-bottom: 8px;
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: #76ae36;
+    outline: none;
+    color: #fff;
+    font-size: 14px;
+    padding-left: 40px;
+    &::placeholder {
+      color: #fff;
+      font-size: 14px;
+    }
+  }
+
+  button {
+    margin-top: 19px;
+    padding: 18px 0 16px;
+    font-size: 14px;
+    @include f700;
+    text-transform: uppercase;
+    color: #000;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+    width: 140px;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 2px 0px rgba(117, 173, 53, 0.75);
+  }
+}
+
+.create-acc {
+  margin-top: 19px;
+  padding: 15px 0 15px 28px;
+  text-align: center;
+  width: 245px;
+  background-color: #76ae36;
+  font-size: 18px;
+  color: #fff;
+  position: relative;
+  &::before {
+    position: absolute;
+    font-family: "icomoon";
+    content: "\f044";
+    font-size: 18px;
+    left: 35px;
+  }
+}
+
+.fancybox-button svg path {
+  fill: #fff;
+}
+.lost-pass {
+  display: block;
+  margin-top: 20px;
+  color: #fff;
+  font-size: 18px;
+}
+
 .search {
   background-repeat: no-repeat;
   background-size: cover;
@@ -1490,5 +1596,108 @@
   span {
     @include f500;
     color: $bg;
+  }
+}
+
+.page-404 {
+  margin-bottom: 150px;
+  &__wrapper {
+    border: 1px solid #d7d7d7;
+  }
+
+  &__head {
+    font-size: 24px;
+    @include f500;
+    color: #444;
+    padding: 23px 27px;
+    background-color: #ffffff;
+    border-bottom: 1px solid #d7d7d7;
+  }
+
+  &__inner {
+    background-color: $green;
+    text-align: center;
+  }
+
+  &__404 {
+    margin-left: -85px;
+    font-size: 300px;
+    line-height: 300px;
+    @include f700;
+    color: #fff;
+    padding-top: 100px;
+    padding-bottom: 10px;
+    position: relative;
+    &::after {
+      position: absolute;
+      content: "";
+      background-image: url(../images/page_404.png);
+      width: 150px;
+      height: 292px;
+      margin-left: 20px;
+      margin-top: -20px;
+    }
+  }
+
+  &__title {
+    font-size: 30px;
+    line-height: 24px;
+    letter-spacing: 0.2em;
+    color: #ffffff;
+    margin-bottom: 30px;
+  }
+
+  &__text {
+    font-size: 18px;
+    line-height: 24px;
+    @include f500;
+    color: #ffffff;
+    max-width: 520px;
+    margin: 0 auto;
+  }
+
+  &__link {
+    margin: 50px 0 100px;
+    width: 210px;
+    padding: 16px;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    font-size: 14px;
+    @include f700;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    color: #ffffff;
+  }
+}
+
+.about {
+  margin-bottom: 150px;
+  &__wrapper {
+    border: 1px solid #d7d7d7;
+    background-color: #ffffff;
+  }
+  &__head {
+    font-size: 24px;
+    @include f500;
+    color: #444;
+    padding: 23px 27px;
+    border-bottom: 1px solid #d7d7d7;
+  }
+  &__inner {
+    padding: 0 50px;
+  }
+  &__box {
+    margin: 50px 0;
+    h3 {
+      font-size: 20px;
+      line-height: 24px;
+      @include f700;
+      color: #444444;
+    }
+    p {
+      font-size: 15px;
+      line-height: 24px;
+      color: #707070;
+    }
   }
 }
