--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1701,3 +1701,133 @@
     }
   }
 }
+
+.contact {
+  margin-bottom: 135px;
+  &__wrapper {
+    border: 1px solid #d7d7d7;
+    background-color: #ffffff;
+  }
+
+  &__head {
+    font-size: 24px;
+    @include f500;
+    color: #444;
+    padding: 23px 40px;
+    border-bottom: 1px solid #d7d7d7;
+  }
+
+  &__inner {
+    padding: 35px 40px 15px;
+  }
+
+  &__map {
+    margin-bottom: 60px;
+    iframe {
+      width: 100%;
+      height: 415px;
+    }
+  }
+
+  &__box {
+    display: flex;
+  }
+
+  &__info {
+    max-width: 330px;
+    width: 100%;
+    margin-right: 30px;
+  }
+
+  &__info-item {
+    margin-bottom: 30px;
+  }
+
+  &__info-title {
+    font-family: "Roboto", sans-serif !important;
+    padding-bottom: 20px;
+    margin-bottom: 25px;
+    font-size: 20px;
+    @include f500;
+    color: $bg;
+    padding-left: 40px;
+    position: relative;
+    &::after {
+      position: absolute;
+      content: "";
+      width: 44px;
+      height: 4px;
+      background-color: $green;
+      left: 40px;
+      bottom: 0;
+    }
+    &::before {
+      font-family: "icomoon";
+      color: $green;
+      font-size: 24px;
+      position: absolute;
+      left: 0;
+      top: -3px;
+    }
+  }
+
+  &__info-content {
+    max-width: 235px;
+    padding-left: 40px;
+    color: #707070;
+  }
+
+  &__form {
+    width: 100%;
+    input {
+      border: none;
+      background-color: #f1f4f5;
+      height: 43px;
+      padding: 0 17px;
+      width: 350px;
+      margin-bottom: 30px;
+      &::placeholder {
+        color: #7a7a7a;
+        font-size: 15px;
+      }
+    }
+    textarea {
+      border: none;
+      background-color: #f1f4f5;
+      padding: 13px 17px;
+      height: 190px;
+      width: 100%;
+      display: block;
+      resize: none;
+      margin-bottom: 23px;
+      &::placeholder {
+        color: #7a7a7a;
+        font-size: 15px;
+      }
+    }
+    button {
+      border: none;
+      font-size: 16px;
+      @include f700;
+      text-transform: uppercase;
+      color: #ffffff;
+      background-color: #8bc34a;
+      text-align: center;
+      padding: 20px 5px;
+      width: 190px;
+      cursor: pointer;
+    }
+  }
+
+  &__form-title {
+    font-size: 24px;
+    @include f500;
+    color: #333333;
+    margin-bottom: 20px;
+  }
+
+  &__form-row {
+    display: flex;
+    justify-content: space-between;
+  }
+}
