--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1424,7 +1424,7 @@
   }
 }
 
-.tab_content {
+.tab__content {
   border: 1px solid #d7d7d7;
   border-top: none;
   background-color: #ffffff;
@@ -1829,5 +1829,101 @@
   &__form-row {
     display: flex;
     justify-content: space-between;
+  }
+}
+
+.product-one__tabs.settings__tabs {
+  display: flex;
+  .tabs {
+    max-width: 270px;
+    width: 100%;
+    height: 100%;
+    margin-right: 30px;
+    border: 1px solid #d7d7d7;
+    border-bottom: none;
+    text-align: left;
+    display: block;
+    span {
+      display: block;
+      background-color: #fff;
+      border-bottom: 1px solid #d7d7d7;
+      padding: 17px 17px 17px 50px;
+      color: #707070;
+      font-size: 14px;
+      @include f500;
+      &.active {
+        border-bottom: 2px solid $green;
+        color: #37474f;
+        &::before {
+          color: $green;
+        }
+      }
+      &::before {
+        left: 24px;
+        color: #444;
+      }
+    }
+  }
+
+  .tabs .tab + .tab {
+    border-left: none;
+  }
+
+  .tab__content {
+    width: 100%;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+  }
+}
+
+.settings {
+  padding-bottom: 100px;
+}
+
+.page-box {
+  border: 1px solid #d7d7d7;
+  background-color: #fff;
+  min-height: 100%;
+}
+
+.page-box__title {
+  border-bottom: 1px solid #d7d7d7;
+  padding: 18px 35px;
+  font-size: 24px;
+  @include f500;
+  color: $bg;
+}
+
+.page-box__content {
+  padding: 30px 35px 80px;
+}
+
+.settings__line {
+  margin-bottom: 21px;
+  display: flex;
+  align-items: center;
+  label {
+    width: 260px;
+    color: #444;
+  }
+  input {
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    background-color: #f9f9f9;
+    border: 1px solid #d7d7d7;
+    color: #000;
+    padding: 0 10px;
+  }
+  select {
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    background-color: #f9f9f9;
+    border: 1px solid #d7d7d7;
+    color: #000;
+    padding: 0 10px;
+    color: #707070;
   }
 }
