--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Roboto-Regular", sans-serif;
-  src: url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff");
+  src: url("../fonts/Roboto-Regular.woff2") format("woff2"), 
+       url("../fonts/Roboto-Regular.woff") format("woff");
   font-weight: 400;
   font-display: swap;
 }
@@ -9,8 +10,9 @@
   font-family: "icomoon";
   src: url("../fonts/icomoon.eot?ytssfg");
   src: url("../fonts/icomoon.eot?ytssfg#iefix") format("embedded-opentype"),
-    url("../fonts/icomoon.ttf?ytssfg") format("truetype"), url("../fonts/icomoon.woff?ytssfg") format("woff"),
-    url("../fonts/icomoon.svg?ytssfg#icomoon") format("svg");
+       url("../fonts/icomoon.ttf?ytssfg") format("truetype"), 
+       url("../fonts/icomoon.woff?ytssfg") format("woff"),
+       url("../fonts/icomoon.svg?ytssfg#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
