--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,10 @@
+@import "fonts";
 @import "vars";
 @import "global";
-@import "fonts";
+
+.header {
+  background-color: #fff;
+}
 
 .header__top-inner {
   display: flex;
@@ -51,7 +55,7 @@
   li {
     display: inline-block;
     & + li {
-      margin-left: 40px;
+      margin-left: 33px;
     }
   }
   a {
@@ -78,9 +82,7 @@
     font-size: 14px;
     transform: translate(-50%, -50%);
   }
-  // & + .header__circle {
-  //   margin-left: 15px;
-  // }
+  
   span {
     position: absolute;
     width: 18px;
@@ -108,13 +110,13 @@
 }
 
 .basket {
+  margin-right: 20px;
   span {
     background-color: #95c85a;
   }
 }
 
 .user {
-  margin-left: 20px;
   margin-right: 25px;
   padding-right: 20px;
   position: relative;
@@ -179,6 +181,7 @@
   transition: all 0.3s;
   height: 0;
   overflow: hidden;
+  z-index: 1;
   a {
     color: #546e7a;
     font-size: 12px;
@@ -189,6 +192,7 @@
 .circle__menu {
   position: absolute;
   top: 62px;
+  z-index: 1;
   right: 0;
   border-top: 1px solid #e0e0e0;
   height: 0;
@@ -328,11 +332,16 @@
   color: #ef6c00;
 }
 
+.header__btn-menu,
+.menu__btn {
+  display: none;
+}
+
 #modal {
   background-color: $green;
   max-width: 730px;
   width: 100%;
-  padding: 90px 0 110px;
+  padding: 90px 10px 110px;
 }
 
 .login__title {
@@ -501,6 +510,12 @@
   background-color: $grey;
 }
 
+.products__wrapper,
+.product-slider__wrapper {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
 .products__inner-btn {
   text-align: center;
   margin-bottom: 60px;
@@ -522,15 +537,20 @@
 
 .products__inner-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
+  margin-left: -30px;
 }
 
+.products .product__item {
+  flex-basis: calc(25% - 30px);
+  margin-left: 30px;
+}
 .product__item {
   max-width: 442px;
-  width: 100%;
+  width: 100%; 
   box-shadow: 0px 1px 2px 0px rgba(205, 213, 222, 0.75);
-  margin-bottom: 30px;
+  margin-bottom: 30px; 
   &-img {
     min-height: 250px;
     background-repeat: no-repeat;
@@ -1159,7 +1179,8 @@
 .product-page__content {
   width: 100%;
   .product__item {
-    max-width: 270px;
+    flex-basis: calc(33.3333% - 30px);
+    margin-left: 30px;
     background-color: #fff;
     transition: all 0.5s;
   }
@@ -1181,9 +1202,10 @@
 
 .product-page__items {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   margin-bottom: 30px;
+  margin-left: -30px;
 }
 
 .pagination__list {
@@ -1221,6 +1243,7 @@
 .product__item {
   &.list {
     max-width: 100%;
+    flex-basis: 100%;
     .product__item-img {
       width: 240px;
       float: left;
@@ -1488,6 +1511,36 @@
   }
   .icon-heart-o {
     background-color: #42a5f5;
+  }
+
+  .jq-selectbox__select {
+    width: 82px;
+    height: 27px;
+    background: #fff;
+    border: 1px solid #ccc;
+    padding: 0 10px;
+    border-radius: 0;
+    box-shadow: none;
+    font-family: "Roboto-Regular", sans-serif;
+    font-size: 13px;
+    line-height: 27px;
+    color: #707070;
+    text-shadow: none;
+  }
+  .jq-selectbox__trigger-arrow {
+    border: none;
+    top: 0;
+    right: 12px;
+    line-height: 27px;
+    font-size: 13px;
+    color: $green;
+    &::before {
+      font-family: "icomoon";
+      content: "\f0d7";
+    }
+  }
+  .jq-selectbox__trigger {
+    border-left: none;
   }
 }
 
@@ -1926,4 +1979,513 @@
     padding: 0 10px;
     color: #707070;
   }
+  .jq-selectbox {
+    max-width: 540px;
+    width: 100%;
+  }
+  .jq-selectbox__select {
+    height: 40px;
+    padding: 0 18px;
+    border: 1px solid #d7d7d7;
+    border-bottom-color: #d7d7d7;
+    border-radius: 0;
+    background: #f9f9f9;
+    box-shadow: none;
+    font-family: "Roboto-Regular", sans-serif;
+    line-height: 40px;
+    color: #707070;
+    text-shadow: none;
+  }
+  .jq-selectbox__trigger-arrow {
+    border: none;
+    top: 0;
+    right: 20px;
+    line-height: 40px;
+    font-size: 15px;
+    &::before {
+      font-family: "icomoon";
+      content: "\f0d7";
+    }
+  }
+  .jq-selectbox__trigger {
+    border-left: none;
+  }
 }
+
+// !Profile page
+
+.profile__inner {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.profile__aside {
+  margin-right: 30px;
+  max-width: 270px;
+  width: 100%;
+}
+
+.profile__content {
+  width: 100%;
+}
+
+.profile-status {
+  padding: 5px 9px 5px 30px;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  font-size: 13px;
+  line-height: 16px;
+  color: #70838d;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "";
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    left: 12px;
+    top: 8px;
+  }
+}
+.profile-on::before {
+  background-color: #8bbe44;
+}
+.profile-off::before {
+  background-color: $red;
+}
+
+.profile__aside-btn {
+  margin-bottom: 13px;
+  text-align: center;
+}
+.profile__aside-message {
+  margin-bottom: 17px;
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  color: #fff;
+  @include f500;
+  padding: 15px 10px;
+  background-color: #546e7a;
+  box-shadow: 0px 1px 2px 0px rgba(69, 89, 99, 0.75);
+  position: relative;
+  &::before {
+    position: absolute;
+    font-family: "icomoon";
+    content: "\f003";
+    font-size: 16px;
+    left: 50px;
+    top: 17px;
+  }
+}
+.profile__aside-following {
+  margin-bottom: 17px;
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  color: #fff;
+  @include f700;
+  background-color: $green;
+  padding: 15px 10px;
+  box-shadow: 0px 1px 2px 0px rgba(69, 89, 99, 0.75);
+}
+
+.profile__banner {
+  padding: 20px;
+  background-color: #ffffff;
+  border: 1px solid #d7d7d7;
+  margin-bottom: 30px;
+}
+
+.profile__banner-images {
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 332px;
+  background-position: center;
+}
+
+.profile {
+  .aside-item {
+    margin-bottom: 25px;
+  }
+  .footer__social-link {
+    margin-bottom: 20px;
+  }
+  &__items {
+    display: flex;
+    border: 1px solid #d7d7d7;
+  }
+
+  &__item {
+    width: 25%;
+    background-color: #fff;
+    text-align: center;
+    padding: 17px 5px 15px;
+    border-right: 1px solid #d7d7d7;
+    font-size: 14px;
+    &:last-child {
+      border-right: none;
+    }
+  }
+
+  &__item-title {
+    color: $bg;
+    @include f500;
+  }
+
+  &__item-content {
+    color: #707070;
+    &.profile__item-sales {
+      color: $bg;
+    }
+  }
+}
+
+.profile-settings {
+  .product-one__tabs.settings__tabs {
+    .tabs span {
+      font-family: 'Roboto', sans-serif !important;
+      font-weight: 500;
+      color: #707070;
+      position: relative;
+      &.active::before {
+        color: $green;
+      }
+      &::before {
+        font-family: 'icomoon';
+        position: absolute;
+        left: 27px;
+        top: 16px;
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+.personal-box {
+  background-color: #fff;
+  padding: 35px 40px 25px;
+  border: 1px solid #d7d7d7;
+  &__title {
+    font-size: 20px;
+    color: $bg;
+    @include f700;
+    margin-bottom: 25px;
+  }
+  &__text {
+    color: #707070;
+    text-align: justify;
+    margin-bottom: 45px;
+  }
+  &__item-head {
+    display: flex;
+    justify-content: space-between;
+    font-size: 16px;
+    @include f500;
+    color: $bg;
+    margin-bottom: 12px;
+  }
+  &__item-name {
+    font-style: italic;
+  }
+  &__item-number {
+    @include f700;
+  }
+  &__item-line {
+    height: 15px;
+    background-color: #f4f4f4;
+    border-radius: 3px;
+    margin-bottom: 23px;
+    span {
+      display: block;
+      border-radius: 3px;
+      height: 15px;
+      background-image: url(../images/pro-bar.jpg);
+    }
+  }
+}
+
+// !Upload page
+
+.upload {
+  &__inner {
+    background-color: #fff;
+    border: 1px solid #d7d7d7;
+    margin-bottom: 107px;
+    button {
+      color: #fff;
+      background-color: $green;
+      border: none;
+      padding: 15px 36px;
+      margin: 15px 0 0 175px;
+      cursor: pointer;
+    }
+  }
+
+  &__inner-title {
+    font-size: 24px;
+    @include f500;
+    color: $bg;
+    padding: 16px 35px 18px;
+    border-bottom: 1px solid #d7d7d7;
+    margin-bottom: 40px;
+  }
+
+  &__inner-content {
+    margin-bottom: 30px;
+    padding: 0 50px 0 45px;
+  }
+}
+
+.upload-line {
+  margin-bottom: 25px;
+  display: flex;
+  label {
+    min-width: 175px;
+    padding-right: 10px;
+    color: #444;
+    padding-top: 3px;
+    span {
+      color: $green;
+      font-size: 24px;
+    }
+  }
+  input,
+  select,
+  textarea {
+    width: 100%;
+    border: 1px solid #d7d7d7;
+    display: block;
+    height: 40px;
+    background-color: #f9f9f9;
+    padding: 0 18px;
+    color: #707070;
+    &::placeholder {
+      color: #707070;
+    }
+  }
+  input[type="file"] {
+    outline: none;
+  }
+  textarea {
+    resize: none;
+    height: 150px;
+    padding: 8px 18px;
+  }
+  .jq-selectbox {
+    width: 100%;
+  }
+  .jq-selectbox__select {
+    height: 40px;
+    padding: 0 18px;
+    border: 1px solid #d7d7d7;
+    border-bottom-color: #d7d7d7;
+    border-radius: 0;
+    background: #f9f9f9;
+    box-shadow: none;
+    font-family: "Roboto-Regular", sans-serif;
+    line-height: 40px;
+    color: #707070;
+    text-shadow: none;
+  }
+  .jq-selectbox__trigger-arrow {
+    border: none;
+    top: 0;
+    right: 20px;
+    line-height: 40px;
+    font-size: 15px;
+    &::before {
+      font-family: "icomoon";
+      content: "\f0d7";
+    }
+  }
+  .jq-selectbox__trigger {
+    border-left: none;
+  }
+  .jq-file {
+    width: 100%;
+    padding: 0 18px;
+    border-radius: 0;
+    box-shadow: none;
+    height: 40px;
+    border: 1px solid #d7d7d7;
+    background: #f9f9f9;
+  }
+  .jq-file__name {
+    box-sizing: border-box;
+    width: 100%;
+    height: 40px;
+    padding: 0;
+    margin-left: 100px;
+    outline: none;
+    border: none;
+    border-bottom-color: transparent;
+    border-radius: 0;
+    background: transparent;
+    box-shadow: none;
+    font-size: 12px;
+    color: #707070;
+    line-height: 40px;
+  }
+  .jq-file__browse {
+    top: 6px;
+    right: auto;
+    left: 9px;
+    padding: 0 12px;
+    font-size: 12px;
+    line-height: 24px;
+    color: #444;
+    border: 1px solid #d7d7d7;
+    border-left: 1px solid #d7d7d7;
+    border-radius: 0;
+    background: #fff;
+    box-shadow: none;
+    text-shadow: none;
+  }
+}
+
+
+// !Withdrawals-section  ////////////////////////////
+
+.withdrawals {
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 110px;
+  }
+
+  &__col {
+    max-width: 570px;
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #dedede;
+    height: 100%;
+  }
+
+  &__title {
+    padding: 18px 32px 24px;
+    border-bottom: 1px solid #dedede;
+    margin-bottom: 30px;
+    color: $bg;
+    @include f500;
+    font-size: 24px;
+  }
+
+  &__content {
+    padding-left: 35px;
+    padding-right: 40px;
+    button {
+      color: #fff;
+      background-color: $green;
+      border: none;
+      padding: 15px 36px;
+      margin-bottom: 50px;
+      cursor: pointer;
+    }
+  }
+
+  &__form-line {
+    margin-bottom: 25px;
+    label {
+      display: block;
+      width: 100%;
+      font-size: 16px;
+      @include f500;
+      margin-bottom: 15px;
+      color: $bg;
+      span {
+        color: $green;
+      }
+    }
+    input,
+    select {
+      width: 100%;
+      border: 1px solid #d7d7d7;
+      display: block;
+      height: 40px;
+      background-color: #f9f9f9;
+      padding: 0 18px;
+      color: #707070;
+      &::placeholder {
+        color: #707070;
+      }
+    }
+    .jq-selectbox {
+      width: 100%;
+    }
+    .jq-selectbox__select {
+      height: 40px;
+      padding: 0 18px;
+      border: 1px solid #d7d7d7;
+      border-bottom-color: #d7d7d7;
+      border-radius: 0;
+      background: #f9f9f9;
+      box-shadow: none;
+      font-family: "Roboto-Regular", sans-serif;
+      line-height: 40px;
+      color: #707070;
+      text-shadow: none;
+    }
+    .jq-selectbox__trigger-arrow {
+      border: none;
+      top: 0;
+      right: 20px;
+      line-height: 40px;
+      font-size: 15px;
+      &::before {
+        font-family: "icomoon";
+        content: "\f0d7";
+      }
+    }
+    .jq-selectbox__trigger {
+      border-left: none;
+    }
+  }
+
+  &__content-items {
+    padding-bottom: 35px;
+  }
+
+  &__content-item {
+    display: flex;
+    height: 42px;
+    align-items: center;
+    font-size: 13px;
+    color: #444;
+    &:nth-child(odd) {
+      background-color: #f9f9f9;
+    }
+  }
+
+  &__content-date {
+    width: 154px;
+    padding-left: 20px;
+    @include f500;
+  }
+
+  &__content-email {
+    width: 180px;
+    @include f500;
+  }
+
+  &__content-price {
+    width: 70px;
+    @include f700;
+  }
+
+  &__content-status {
+    width: 88px;
+    @include f700;
+  }
+
+  &__content-paid {
+    color: $green;
+  }
+}
+
+
+
+
+
+@import "media";
